<resources>
    <string name="app_name">RODI</string>
    <string name="splashtext">TNJ Developers</string>
    <string name="login_with_google">Login with Google</string>
    <string name="loading">Loading...</string>
    <string name="Gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="choose_image">Choose Image</string>
    <string name="crop">Rectify</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="grayscale">Convert Grayscale</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="title_activity_choose_image">ChooseImage</string>
</resources>
