<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tnjdevelopers.rodi.ChooseImage">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/chooseback"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/choose_image" />

        <Button
            android:id="@+id/buttonGallery"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/Gallery"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:textStyle="italic"
            android:textSize="20sp"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:onClick="chooseGallery"/>

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/Camera"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_marginRight="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:onClick="chooseCamera"/>

        <TextView
            android:id="@+id/textUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:background="@android:color/transparent"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
